--- a/homepage/css/message.css
+++ b/homepage/css/message.css
@@ -33,5 +33,5 @@
 /* 쪽지함 */
 #message_box .top_buttons{ text-align: right; margin: 20px 0;}
 #message_box .top_buttons li{display: inline; margin-right: 20px;}
-#message_box .top_buttons li a:link {text-decoration: underline; color:#516e7f;}
-#message_box .top_buttons li a:visited {text-decoration: underline; color: #516e7f;} 
+#message_box .top_buttons li a:link { font-weight: bold; text-decoration: underline;color:#516e7f;}
+#message_box .top_buttons li a:visited { font-weight: bold; text-decoration: underline; color: #516e7f;} 
